add easteregg, improve text legibility, replace old spotify-links

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="theme-color" content="#0a0b0e" />
     <meta name="msapplication-TileColor" content="#0a0b0e" />
-    <meta name="description" content="TEDRA - Techno. 132 bpm straight, deep, loud and hard. Behind the name lurks the german music producer &quot;Matthias Teifl&quot;. Starting in 2018, his sound always covered a wider spectrum from peak-time techno to melodic and progressive tracks." />
+    <meta name="description" content="TEDRA - Techno. 132 bpm straight, deep, loud and hard. Behind the name lurks the german music producer Matthias Teifl. Starting in 2018, his sound always covered a wider spectrum from peak-time techno to melodic and progressive tracks. Yet always staying unique in his musical style. Experiencing Tedra live is always about the thriving rhythm of techno beats. A must-see for every fan of electronic dance music who is looking for an energetic night out." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="favicon/apple-touch-icon.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
@@ -106,7 +106,7 @@
                         <iframe src="https://open.spotify.com/embed/track/3XmWV6513jqPByVdTpcLTL?theme=0" title="TEDRA - Timeshift. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/2sEzBARoFnubA4t4QcYaIZ?theme=0" title="TEDRA - The Collision. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                        <iframe src="https://open.spotify.com/embed/track/5XWOY4JCFufdmTmxf0fDPw?theme=0" title="TEDRA - The Collision. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
                         <iframe src="https://open.spotify.com/embed/track/5stDfhZ4at9B94mZ7a082M?theme=0" title="TEDRA - The Explorer. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
@@ -118,13 +118,13 @@
                         <iframe src="https://open.spotify.com/embed/track/2vTfSv30ECUmpplpK4bXzm?theme=0" title="TEDRA - Lunar. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/1Qk4kH9YTcwXVDJW2wE1Nb?theme=0" title="TEDRA - Supernova. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                        <iframe src="https://open.spotify.com/embed/track/3wIAqcWorCwVrpWNwPpT5B?theme=0" title="TEDRA - Supernova. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
                         <iframe src="https://open.spotify.com/embed/track/5u9codkJd6iYBS37YfpXYs?theme=0" title="TEDRA - Anchor Mine. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/1rfhPMZPH0iuVR1eG4o3qu?theme=0" title="TEDRA - The Engine. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                        <iframe src="https://open.spotify.com/embed/track/0nU0t369FAd1yxI4RMnY0o?theme=0" title="TEDRA - The Engine. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
                         <iframe src="https://open.spotify.com/embed/track/02c7grPUtzJgyud1nfJuor?theme=0" title="TEDRA - Evolution. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
@@ -248,7 +248,7 @@
                     TEDRA - Techno. 132 bpm straight, deep, loud and hard.
                 </p>
                 <p class="section__text">
-                    Behind the name lurks the german music producer &quot;Matthias Teifl&quot;.
+                    Behind the name lurks the german music producer Matthias Teifl.
                     Starting in 2018, his sound always covered a wider spectrum from peak-time techno to melodic and progressive tracks.
                     Yet always staying unique in his musical style.
                     Visit his <a href="https://open.spotify.com/artist/32NGcZaWSqKmHby7x1qhXG">Spotify artist-page</a> to discover all his productions.
@@ -268,7 +268,7 @@
             <h3 class="section__title">Imprint / Privacy.</h3>
             <div class="section__content" lang="de-DE">
                 <p class="section__text">
-                    Diese Internetseite nutzt Formspree, einen Webdienst der Webseite https://formspree.io (nachfolgend "Formspree"). Um Ihnen die Funktionalität des Kontaktformulars zur Verfügung zu stellen, senden wir Ihre E-Mail-Adresse, Ihren Vornamen und Nachnamen an Formspree. Diese Daten werden dort verarbeitet, gespeichert und an Matthias Teifl per Mail an <span class="email-guard" data-mail="tedra-official" data-domain="web.de">@</span> weitergegeben. Außerdem werden von Formspree unter anderem weitere Daten wie Ihre IP-Adresse, Ihr Typ des Browsers, die Domain der Webseite, das Datum und die Zeit des Zugriffs erhoben, um die gewünschte Funktionalität des Kontaktformulars bereitzustellen. Eine detaillierte Übersicht der erhobenen Daten finden Sie <a href="https://formspree.io/legal/privacy-policy" target="_blank" rel="noopener">hier</a>. Rechtsgrundlage für die Nutzung von Formspree ist Art. 6 Abs. 1 S. 1 lit. f DS-GVO (berechtigtes Interesse). In dem vorliegenden Fall werden personenbezogene Daten in die USA übertragen werden: Die Verarbeitung, Weitergabe und Speicherung der Daten ist von Formspree in dem folgenden Dokument zusammengefasst: <a href="https://formspree.io/legal/privacy-policy">Hier</a>.
+                    Diese Internetseite nutzt Formspree, einen Webdienst der Webseite <a href="https://formspree.io">formspree.io</a> (nachfolgend "Formspree"). Um Ihnen die Funktionalität des Kontaktformulars zur Verfügung zu stellen, senden wir Ihre E-Mail-Adresse, Ihren Vornamen und Nachnamen an Formspree. Diese Daten werden dort verarbeitet, gespeichert und an Matthias Teifl per Mail an <span class="email-guard" data-mail="tedra-official" data-domain="web.de">@</span> weitergegeben. Außerdem werden von Formspree unter anderem weitere Daten wie Ihre IP-Adresse, Ihr Typ des Browsers, die Domain der Webseite, das Datum und die Zeit des Zugriffs erhoben, um die gewünschte Funktionalität des Kontaktformulars bereitzustellen. Eine detaillierte Übersicht der erhobenen Daten finden Sie <a href="https://formspree.io/legal/privacy-policy" target="_blank" rel="noopener">hier</a>. Rechtsgrundlage für die Nutzung von Formspree ist Art. 6 Abs. 1 S. 1 lit. f DS-GVO (berechtigtes Interesse). In dem vorliegenden Fall werden personenbezogene Daten in die USA übertragen werden: Die Verarbeitung, Weitergabe und Speicherung der Daten ist von Formspree in dem folgenden Dokument zusammengefasst: <a href="https://formspree.io/legal/privacy-policy">Hier</a>.
                 </p>
                 <p class="section__text">&copy; 2022 Tedra</p>
             </div>
