Add new tracks 'Magnetar' and 'Fg=Mxg'

--- a/src/index.html
+++ b/src/index.html
@@ -100,34 +100,40 @@
             <div class="section__content section__content--wide justify-center">
                 <div class="spotify-grid">
                     <div class="spotify-grid__item">
+                        <iframe src="https://open.spotify.com/embed/track/1uC5WkyZkVKTQQvdzNk5o7?theme=0" title="TEDRA - Magnetar. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                    </div>
+                    <div class="spotify-grid__item">
+                        <iframe src="https://open.spotify.com/embed/track/5H60F9qZ2YTlJ42n9ayv3r?theme=0" title="TEDRA - Fg=Mxg. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                    </div>
+                    <div class="spotify-grid__item">
                         <iframe src="https://open.spotify.com/embed/track/3TEeyzvq8W4lSzCwYBj6JS?theme=0" title="TEDRA - Devastation. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
                         <iframe src="https://open.spotify.com/embed/track/3XmWV6513jqPByVdTpcLTL?theme=0" title="TEDRA - Timeshift. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
+                        <iframe src="https://open.spotify.com/embed/track/3wIAqcWorCwVrpWNwPpT5B?theme=0" title="TEDRA - Supernova. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                    </div>
+                    <div class="spotify-grid__item">
                         <iframe src="https://open.spotify.com/embed/track/5XWOY4JCFufdmTmxf0fDPw?theme=0" title="TEDRA - The Collision. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                    </div>
+                    <div class="spotify-grid__item">
+                        <iframe src="https://open.spotify.com/embed/track/0nU0t369FAd1yxI4RMnY0o?theme=0" title="TEDRA - The Engine. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                    </div>
+                    <div class="spotify-grid__item">
+                        <iframe src="https://open.spotify.com/embed/track/2vTfSv30ECUmpplpK4bXzm?theme=0" title="TEDRA - Lunar. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                    </div>
+                    <div class="spotify-grid__item">
+                        <iframe src="https://open.spotify.com/embed/track/02c7grPUtzJgyud1nfJuor?theme=0" title="TEDRA - Evolution. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                    </div>
+                    <div class="spotify-grid__item">
+                        <iframe src="https://open.spotify.com/embed/track/5u9codkJd6iYBS37YfpXYs?theme=0" title="TEDRA - Anchor Mine. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
                         <iframe src="https://open.spotify.com/embed/track/5stDfhZ4at9B94mZ7a082M?theme=0" title="TEDRA - The Explorer. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
                         <iframe src="https://open.spotify.com/embed/track/4KCJSorIEyoUJrBk4UwgyO?theme=0" title="TEDRA - The Clock. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
-                    </div>
-                    <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/2vTfSv30ECUmpplpK4bXzm?theme=0" title="TEDRA - Lunar. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
-                    </div>
-                    <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/3wIAqcWorCwVrpWNwPpT5B?theme=0" title="TEDRA - Supernova. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
-                    </div>
-                    <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/5u9codkJd6iYBS37YfpXYs?theme=0" title="TEDRA - Anchor Mine. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
-                    </div>
-                    <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/0nU0t369FAd1yxI4RMnY0o?theme=0" title="TEDRA - The Engine. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
-                    </div>
-                    <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/02c7grPUtzJgyud1nfJuor?theme=0" title="TEDRA - Evolution. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                 </div>
                 <div class="spotify-grid__link">
