--- a/src/index.html
+++ b/src/index.html
@@ -149,6 +149,15 @@
             <div class="section__content section__content--wide justify-center">
                 <div class="youtube-grid">
                     <div class="youtube-grid__item">
+                        <a href="https://www.youtube.com/watch?v=DCRJshHrbK8" class="youtube-poster js-iframe-poster youtube-poster--small" data-embed-url="https://www.youtube.com/embed/DCRJshHrbK8?autoplay=1" target="_blank">
+                            <img class="youtube-poster__image" src="https://i.ytimg.com/vi/DCRJshHrbK8/hqdefault.jpg" width="1920" height="1080" alt="TEDRA | Live at Utz Utz Series Closing" loading="lazy">
+                            <div class="youtube-poster__title">TEDRA | Live at Utz Utz Series Closing</div>
+                            <svg class="youtube-poster__play-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
+                                <path fill="currentColor" d="M62.7 16.6c-.7-2.8-2.9-4.9-5.7-5.7-5-1.3-25-1.3-25-1.3s-20 0-25 1.3c-2.8.7-4.9 2.9-5.7 5.7C0 21.6 0 32 0 32s0 10.4 1.3 15.4c.7 2.8 2.9 4.9 5.7 5.7 5 1.3 25 1.3 25 1.3s20 0 25-1.3c2.8-.7 4.9-2.9 5.7-5.7C64 42.4 64 32 64 32s0-10.4-1.3-15.4zm-37.1 25V22.4L42.2 32l-16.6 9.6z"/>
+                            </svg>
+                        </a>
+                    </div>
+                    <div class="youtube-grid__item">
                         <a href="https://www.youtube.com/watch?v=BfNw2YlySdg" class="youtube-poster js-iframe-poster youtube-poster--small" data-embed-url="https://www.youtube.com/embed/BfNw2YlySdg?autoplay=1" target="_blank">
                             <img class="youtube-poster__image" src="https://i.ytimg.com/vi/BfNw2YlySdg/hqdefault.jpg" width="1920" height="1080" alt="TEDRA | Live at Electronic Village 2022" loading="lazy">
                             <div class="youtube-poster__title">TEDRA | Live at Electronic Village 2022</div>
@@ -188,15 +197,6 @@
                         <a href="https://www.youtube.com/watch?v=WSEdsHuO_RA" class="youtube-poster js-iframe-poster youtube-poster--small" data-embed-url="https://www.youtube.com/embed/WSEdsHuO_RA?autoplay=1" target="_blank">
                             <img class="youtube-poster__image" src="https://i.ytimg.com/vi/WSEdsHuO_RA/hqdefault.jpg" width="1920" height="1080" alt="TEDRA | Live at Technokeller 2019" loading="lazy">
                             <div class="youtube-poster__title">TEDRA | Live at Technokeller 2019</div>
-                            <svg class="youtube-poster__play-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
-                                <path fill="currentColor" d="M62.7 16.6c-.7-2.8-2.9-4.9-5.7-5.7-5-1.3-25-1.3-25-1.3s-20 0-25 1.3c-2.8.7-4.9 2.9-5.7 5.7C0 21.6 0 32 0 32s0 10.4 1.3 15.4c.7 2.8 2.9 4.9 5.7 5.7 5 1.3 25 1.3 25 1.3s20 0 25-1.3c2.8-.7 4.9-2.9 5.7-5.7C64 42.4 64 32 64 32s0-10.4-1.3-15.4zm-37.1 25V22.4L42.2 32l-16.6 9.6z"/>
-                            </svg>
-                        </a>
-                    </div>
-                    <div class="youtube-grid__item">
-                        <a href="https://www.youtube.com/watch?v=GoZI6wZkNqA" class="youtube-poster js-iframe-poster youtube-poster--small" data-embed-url="https://www.youtube.com/embed/GoZI6wZkNqA?autoplay=1" target="_blank">
-                            <img class="youtube-poster__image" src="https://i.ytimg.com/vi/GoZI6wZkNqA/hqdefault.jpg" width="1920" height="1080" alt="TEDRA | Live at Electronic Village 2018" loading="lazy">
-                            <div class="youtube-poster__title">TEDRA | Live at Electronic Village 2018</div>
                             <svg class="youtube-poster__play-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
                                 <path fill="currentColor" d="M62.7 16.6c-.7-2.8-2.9-4.9-5.7-5.7-5-1.3-25-1.3-25-1.3s-20 0-25 1.3c-2.8.7-4.9 2.9-5.7 5.7C0 21.6 0 32 0 32s0 10.4 1.3 15.4c.7 2.8 2.9 4.9 5.7 5.7 5 1.3 25 1.3 25 1.3s20 0 25-1.3c2.8-.7 4.9-2.9 5.7-5.7C64 42.4 64 32 64 32s0-10.4-1.3-15.4zm-37.1 25V22.4L42.2 32l-16.6 9.6z"/>
                             </svg>
