Add beatport to header

--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,12 @@
                 <path fill="currentColor" d="M971.776 556.032c0-53.248-19.456-103.424-55.296-141.312 0 0 0 0 0 0s0 0 0 0 0 0 0 0 0 0 0 0c-29.696-32.768-69.632-55.296-114.688-63.488-25.6-37.888-62.464-66.56-104.448-80.896 0 0 0 0-1.024 0 0 0 0 0-1.024 0-27.648-8.192-51.2-11.264-74.752-9.216-20.48 1.024-35.84 18.432-35.84 37.888v430.080c0 21.504 17.408 38.912 38.912 38.912h149.504c4.096 0 8.192-1.024 11.264-2.048 104.448-13.312 187.392-102.4 187.392-209.92zM763.904 707.584c-3.072 0-5.12 1.024-8.192 1.024h-114.688v-393.216c11.264 1.024 23.552 3.072 37.888 7.168 33.792 11.264 62.464 35.84 80.896 67.584l7.168 12.288 14.336 2.048c36.864 4.096 70.656 21.504 93.184 48.128 0 0 0 0 0 0s0 0 0 1.024c25.6 26.624 39.936 63.488 39.936 103.424 1.024 82.944-66.56 150.528-150.528 150.528zM425.984 293.888c-15.36 0-28.672 12.288-28.672 28.672v405.504c0 15.36 12.288 28.672 28.672 28.672s28.672-12.288 28.672-28.672v-405.504c0-15.36-12.288-28.672-28.672-28.672zM247.808 312.32c-15.36 0-28.672 12.288-28.672 28.672v370.688c0 15.36 12.288 28.672 28.672 28.672s28.672-12.288 28.672-28.672v-371.712c-1.024-15.36-13.312-27.648-28.672-27.648zM79.872 371.712c-15.36 0-28.672 12.288-28.672 28.672v250.88c0 15.36 12.288 28.672 28.672 28.672s28.672-12.288 28.672-28.672v-251.904c0-15.36-13.312-27.648-28.672-27.648z"></path>
             </svg>
         </a>
+        <a class="header__social" href="https://www.beatport.com/artist/tedra/863465" target="_blank" rel="noopener" title="Tedra on Beatport">
+            <svg class="header__social-icon header__social-icon--beatport" viewBox="0 0 320 400" style="enable-background:new 0 0 320 400" xml:space="preserve">
+                <circle style="fill:none;fill-opacity:1;stroke:currentColor;stroke-width:30;stroke-linecap:butt;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1" cx="201.06" cy="277.33" r="93.15"/>
+                <path style="fill:none;fill-opacity:1;stroke:currentColor;stroke-width:30;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1" d="m42.66 262.73 57.93-56.46s7.75-7 29.15-31c0 0 21.4-22.87 21.4-60.51V16.24"/>
+            </svg>
+        </a>
     </div>
     <a class="header__hamburger hamburger js-menu-trigger">
         <div class="hamburger__container">
