Add Excursion EP

--- a/src/index.html
+++ b/src/index.html
@@ -106,6 +106,12 @@
             <div class="section__content section__content--wide justify-center">
                 <div class="spotify-grid">
                     <div class="spotify-grid__item">
+                        <iframe src="https://open.spotify.com/embed/track/4YFN5Cq9X7CMhMuIORDEnN?theme=0" title="TEDRA - Lift Off. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                    </div>
+                    <div class="spotify-grid__item">
+                        <iframe src="https://open.spotify.com/embed/track/4Pzo1ayJ3kR7h0KUQkGGeV?theme=0" title="TEDRA - Re-Entry. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                    </div>
+                    <div class="spotify-grid__item">
                         <iframe src="https://open.spotify.com/embed/track/1uC5WkyZkVKTQQvdzNk5o7?theme=0" title="TEDRA - Magnetar. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
